--- a/references.html
+++ b/references.html
@@ -6461,7 +6461,7 @@
               href="https://atezaz.github.io/"><img _ngcontent-byh-c1="" src="assets/images/logo.png"
                 style="height: 58px;  padding-top: 8px;"></a></span><span _ngcontent-byh-c1=""
             class="example-spacer"></span><a _ngcontent-byh-c1="" class="stepReferences mat-button mat-button-base"
-            href="https://docs.google.com/document/d/1EheiBmQr4P179Ocdn0-fPJ3tfevQKmUor0l2_ka86e8/edit?usp=sharing"
+            href="https://atezaz.github.io/references.html"
             mat-button="" target="_blank" tabindex="0" aria-disabled="false"><span
               class="mat-button-wrapper">References</span>
             <div class="mat-button-ripple mat-ripple" matripple="" ng-reflect-centered="false"
